--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/prefetch": "^0.4.1",
         "aos": "^2.3.4"
     },
     "devDependencies": {
